# SearchApp

./: .gitignore  README.md  SearchApp.py  pyproject.toml
