[tool.poetry]
name = "searchapp"
version = "0.1.0"
description = ""
authors = ["seb"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
altgraph = "0.17.4"
click = "8.1.7"
joblib = "1.3.2"
lxml = "4.9.3"
nltk = "3.8.1"
packaging = "23.2"
pymupdf = "1.23.7"
pymupdfb = "1.23.7"
pyqt5 = "5.15.10"
pyqt5-qt5 = "5.15.2"
pyqt5-sip = "12.13.0"
python-docx = "1.1.0"
regex = "2023.12.25"
tqdm = "4.66.1"
typing-extensions = "4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
